<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="pokemon"
            type="com.ari.pokemon.domain.model.PokemonDomain" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_200"
        android:paddingHorizontal="24dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/container_buttons" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_header"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:layout_constraintTop_toBottomOf="@+id/img_back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    app:load_image_crop="@{pokemon.sprites.imageUrl}"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_static_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_header"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_header"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:text="@{pokemon.name}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_static_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_static_name"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/id" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_static_name"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    app:text_as_int="@{pokemon.id}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_static_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_static_id"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/experience" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_id"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    app:text_as_int="@{pokemon.baseExperience}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_static_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_static_experience"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/height" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_experience"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    app:text_as_int="@{pokemon.height}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_static_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_static_height"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/height" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_height"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    app:text_as_int="@{pokemon.weight}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_static_abilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_static_weight"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/abilities"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_abilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_static_abilities"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    tools:listitem="@layout/item_name"
                    tools:itemCount="3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_static_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/list_abilities"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/abilities"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_static_types"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    tools:listitem="@layout/item_name"
                    tools:itemCount="3" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:text="@string/previous"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_previous"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_next"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>